<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>GameGrinding</groupId>
    <artifactId>GameGrinding</artifactId>
    <version>0.0.1-SNAPSHOT</version>
	
	 <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
        </resources>

        <plugins>
            <!-- Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>17</release>
                </configuration>
            </plugin>

            <!-- JavaFX Maven Plugin -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>application.Main</mainClass>
                       <options>
                            <option>--module-path</option>
                            <option>${java.home}/../lib</option>
                            <option>--add-modules</option>
                            <option>javafx.controls,javafx.fxml,javafx.graphics,javafx.base,javafx.media</option>
                       </options>
                </configuration>
            </plugin>
            
            <!-- JUnit Support -->
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
            </plugin>
            
            <!-- Maven Shade Plugin to create a fat JAR for deployment -->
		
		    <plugin>
		      <groupId>org.apache.maven.plugins</groupId>
		      <artifactId>maven-shade-plugin</artifactId>
		      <version>3.4.1</version>
		      <executions>
		        <execution>
		          <phase>package</phase>
		          <goals>
		            <goal>shade</goal>
		          </goals>
		          <configuration>
		            <finalName>GameGrinding</finalName>
		            <shadedArtifactAttached>false</shadedArtifactAttached>
		            <shadedClassifierName></shadedClassifierName>
		            <transformers>
		              <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
		                <mainClass>application.Main</mainClass>
		              </transformer>
		            </transformers>
		          </configuration>
		        </execution>
		      </executions>
		    </plugin>



        </plugins>
    </build>

    <dependencies>
        <!-- JavaFX Dependencies -->


        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>17</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>17</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>17</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>17</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>17</version>
        </dependency>
	
	
		<dependency>
 		 	<groupId>org.xerial</groupId>
 			 <artifactId>sqlite-jdbc</artifactId>
 			 <version>3.49.1.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
		<dependency>
    		<groupId>org.mindrot</groupId>
    		<artifactId>jbcrypt</artifactId>
    		<version>0.4</version>
		</dependency>

        <!-- JSON-Simple-->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>1.1.1</version>
        </dependency>

        <!-- Gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10</version>
        </dependency>

        <!-- Apache HttpClient -->
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>5.2</version>
        </dependency>
        
        <dependency>
    <groupId>com.konghq</groupId>
    <artifactId>unirest-java</artifactId>
    <version>3.13.6</version>
</dependency>

	<dependency>
  		<groupId>org.slf4j</groupId>
  		<artifactId>slf4j-api</artifactId>
  		<version>2.0.9</version>
	</dependency>
	<dependency>
  		<groupId>ch.qos.logback</groupId>
  		<artifactId>logback-classic</artifactId>
  		<version>1.4.11</version>
</dependency>

<!-- JUnit 5 (Jupiter) -->
<dependency>
    <groupId>org.junit.jupiter</groupId>
    <artifactId>junit-jupiter</artifactId>
    <version>5.10.2</version>
    <scope>test</scope>
</dependency>
<dependency>
    <groupId>org.junit.platform</groupId>
    <artifactId>junit-platform-launcher</artifactId>
    <version>1.10.2</version>
    <scope>test</scope>
</dependency>
<dependency>
    <groupId>org.junit.jupiter</groupId>
    <artifactId>junit-jupiter-api</artifactId>
    <version>5.10.2</version>
    <scope>test</scope>
</dependency>
<dependency>
    <groupId>org.junit.platform</groupId>
    <artifactId>junit-platform-suite</artifactId>
    <version>1.10.2</version>
    <scope>test</scope>
</dependency>


        <!-- Mockito -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
  			<groupId>org.mockito</groupId>
 			 <artifactId>mockito-inline</artifactId>
  			<version>5.2.0</version>
  			<scope>test</scope>
		</dependency>
		<dependency>
    <groupId>org.mockito</groupId>
   	 	<artifactId>mockito-junit-jupiter</artifactId>
    	<version>5.2.0</version>
    	<scope>test</scope>
	</dependency>

	<!-- TestFX for JavaFX UI testing -->
<dependency>
    <groupId>org.testfx</groupId>
    <artifactId>testfx-junit5</artifactId>
    <version>4.0.16-alpha</version>
    <scope>test</scope>
</dependency>
    <dependency>
        <groupId>org.testfx</groupId>
        <artifactId>testfx-core</artifactId>
        <version>4.0.16-alpha</version>
        <scope>test</scope>
    </dependency>
    
	 <dependency>
	    <groupId>org.openjfx</groupId>
	    <artifactId>javafx-swing</artifactId>
	    <version>17</version>
	</dependency>



    </dependencies>
</project>

